# weather-forecast-backend

./: .env  Cargo.toml  README.md
.sqlx/: query-2c5f60c199416fc3d60df33890ea23f57ce830f6900329e1ce8697e48bbca2f4.json  query-32db067ee512f84092fda411950c08c46518b2c6be846c1b07072d8b10840fc7.json  query-3a90c5c595c2fb1447d8820ec8bcfcc5c9d31f9fbcffce09d356af9f38bc3e52.json  query-43021549485ef0627142f44dfc79516044dd3d76da2a5ec27b14701465162778.json  query-56aa3a3a938f4af79e207ad58ed4d518a844ca1375d633d1991e1a836baa778a.json  query-a6a065f30c283165428710d6cdf609ef0aa3ffa3abf2ea8b1ee9d92af2d7b6ef.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20241028084709_create_admin_account.sql  20241030022643_create_weather_info_table.sql  20241030063755_create_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  start_up.rs  telemetry.rs  weather_client.rs
src/authentication/: mod.rs  password.rs
src/errors/: database.rs  mod.rs
src/routers/: mod.rs
src/routers/admin/: dashboard.rs  mod.rs
src/routers/home/: mod.rs
src/routers/login/: get.rs  mod.rs  post.rs
src/routers/weather/: fetcher.rs  mod.rs  storage.rs
tests/api/: helper.rs  login.rs  main.rs
