[package]
name = "weather_forecast_wechat_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
axum = { version = "0.7.7", features = ["macros"] }
axum-messages = "0.7.0"
axum-extra = { version = "0.9.4", features = ["cookie"] }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.129"
secrecy = { version = "0.10.3", features = ["serde"] }
config = "0.14.0"
tower = { version = "0.5.1", features = ["retry", "timeout"] }
tower-sessions = "0.13.0"
rand = { version = "0.8.5", features=["std_rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.10.0"
thiserror = "1.0.64"
argon2 = { version = "0.5.3", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio", 
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12.5"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
fake = "2.10.0"
wiremock = "0.6.2"